# HMachine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  thirdpartynotices.txt  wdCMakeConfig.cmake
development/HMRender/RendererCore/: CMakeLists.txt  Declarations.h  RendererCoreDLL.h  RendererCorePCH.cpp
development/HMRender/RendererCore/AnimationSystem/: AnimPoseGenerator.h  AnimationClipResource.h  AnimationPose.h  Declarations.h  EditableSkeleton.h  Skeleton.h  SkeletonBuilder.h  SkeletonComponent.h  SkeletonPoseComponent.h  SkeletonResource.h
development/HMRender/RendererCore/BakedProbes/: BakedProbesComponent.h  BakedProbesVolumeComponent.h  BakedProbesWorldModule.h  BakingInterface.h  BakingUtils.h  ProbeTreeSectorResource.h
development/HMRender/RendererCore/Components/: AlwaysVisibleComponent.h  BeamComponent.h  CameraComponent.h  FogComponent.h  OccluderComponent.h  RenderComponent.h  RenderTargetActivatorComponent.h  RopeRenderComponent.h  SkyBoxComponent.h  SpriteComponent.h  SpriteRenderer.h
development/HMRender/RendererCore/Decals/: DecalAtlasResource.h  DecalComponent.h  DecalResource.h
development/HMRender/RendererCore/GPUResourcePool/: GPUResourcePool.h
development/HMRender/RendererCore/Lights/: AmbientLightComponent.h  BoxReflectionProbeComponent.h  ClusteredDataExtractor.h  ClusteredDataProvider.h  DirectionalLightComponent.h  LightComponent.h  PointLightComponent.h  ReflectionProbeComponentBase.h  SimplifiedDataExtractor.h  SimplifiedDataProvider.h  SkyLightComponent.h  SphereReflectionProbeComponent.h  SpotLightComponent.h
development/HMRender/RendererCore/Material/: MaterialResource.h
development/HMRender/RendererCore/Meshes/: CpuMeshResource.h  CustomMeshComponent.h  DynamicMeshBufferResource.h  InstancedMeshComponent.h  MeshBufferResource.h  MeshBufferUtils.h  MeshComponent.h  MeshComponentBase.h  MeshRenderer.h  MeshResource.h  MeshResourceDescriptor.h  SkinnedMeshComponent.h  SkinnedMeshRenderer.h
development/HMRender/RendererCore/Pipeline/: Declarations.h  ExtractedRenderData.h  Extractor.h  FrameDataProvider.h  InstanceDataProvider.h  RenderData.h  RenderDataBatch.h  RenderPipeline.h  RenderPipelineNode.h  RenderPipelinePass.h  RenderPipelineResource.h  Renderer.h  SortingFunctions.h  View.h  ViewData.h  ViewRenderMode.h
development/HMRender/RendererCore/Rasterizer/: RasterizerObject.h  RasterizerView.h
development/HMRender/RendererCore/RenderContext/: RenderContext.h
development/HMRender/RendererCore/RenderWorld/: RenderWorld.h
development/HMRender/RendererCore/Shader/: ConstantBufferStorage.h  ShaderPermutationBinary.h  ShaderPermutationResource.h  ShaderResource.h  ShaderStageBinary.h  Types.h
development/HMRender/RendererCore/ShaderCompiler/: PermutationGenerator.h  ShaderCompiler.h  ShaderManager.h  ShaderParser.h
development/HMRender/RendererCore/Textures/: Texture2DResource.cpp  Texture2DResource.h  Texture3DResource.cpp  Texture3DResource.h  TextureCubeResource.cpp  TextureCubeResource.h  TextureLoader.cpp  TextureLoader.h  TextureUtils.cpp  TextureUtils.h
development/HMRender/RendererCore/Utils/: WorldGeoExtractionUtil.h
development/HMRender/RendererDX12/: CMakeLists.txt  RendererDX12DLL.h  RendererDX12PCH.cpp  RendererDX12PCH.h
development/HMRender/RendererDX12/Device/: D3D12Device.cpp  D3D12Device.h  D3D12Swapchain.h
development/HMRender/RendererDX12/MemoryAllocation/: D3D12MemoryAllocation.h
development/HMRender/RendererVulkan/: CMakeLists.txt  RendererVulkanDLL.h  RendererVulkanPCH.cpp  RendererVulkanPCH.h
development/HMRender/RendererVulkan/Cache/: ResourceCacheVulkan.h
development/HMRender/RendererVulkan/CommandEncoder/: CommandEncoderImplVulkan.h
development/HMRender/RendererVulkan/Device/: DeviceVulkan.h  InitContext.h  PassVulkan.h  SwapChainVulkan.h
development/HMRender/RendererVulkan/MemoryAllocator/: MemoryAllocatorVulkan.h
development/HMRender/RendererVulkan/Pools/: CommandBufferPoolVulkan.h  DescriptorSetPoolVulkan.h  FencePoolVulkan.h  QueryPoolVulkan.h  SemaphorePoolVulkan.h  StagingBufferPoolVulkan.h
development/HMRender/RendererVulkan/Resources/: BufferVulkan.h  FallbackResourcesVulkan.h  QueryVulkan.h  RenderTargetViewVulkan.h  ResourceViewVulkan.h  TextureVulkan.h  UnorderedAccessViewVulkan.h
development/HMRender/RendererVulkan/Shader/: ShaderVulkan.h  VertexDeclarationVulkan.h
development/HMRender/ShaderCompilerDXC/: CMakeLists.txt  ShaderCompilerDXC.cpp  ShaderCompilerDXC.h  ShaderCompilerDXCDLL.h  SpirvMetaData.h  finalize.cmake
development/UnitTests/TestFramework/: CMakeLists.txt  TestFrameworkDLL.h  TestFrameworkPCH.cpp  TestFrameworkPCH.h
development/Utilities/: CMakeLists.txt  UtilitiesDLL.h  UtilitiesPCH.cpp
development/Utilities/GridAlgorithms/: Rasterization.h
(+941 files in other folders)
